# fastfantasy

./: CHANGELOG.md  pyproject.toml
config/: config.py
data/processed/: valid_tournaments.csv
data/raw/: espn_tournaments.csv
docs/: Makefile  example.ipynb  make.bat
fastfantasy/: CONTRIBUTING.md  README.md  pyproject.toml
fastfantasy/config/: config.py
fastfantasy/docs/: conf.py  example.ipynb
fastfantasy/src/fastfantasy/: historical_data.py  tournament.py  tournaments.py
fastfantasy/tests/: test_tournaments.py
src/fastfantasy/: __init__.py  api_examples.ipynb  draftkings_mappings.py  fastfantasy.py  historical.py  historical_data.py  path_config.py  tournament.py
src/fastfantasy/data/processed/: hpd_2018.csv
src/fastfantasy/data/processed/tournaments/: valid_tournaments_2018.csv
src/fastfantasy/data/raw/: 3742.csv  3743.csv  3744.csv  3745.csv  3746.csv  3747.csv  3748.csv  3749.csv  3750.csv  3756.csv  3763.csv  3768.csv  3771.csv  3774.csv  3776.csv  3777.csv  3780.csv  3781.csv  3789.csv  3791.csv  3802.csv  3803.csv  401025221.csv  401025246.csv  401025247.csv  401025249.csv  401025250.csv  401025251.csv  401025252.csv  401025253.csv  401025254.csv  401025255.csv  401025256.csv  401025257.csv  401025258.csv  401025259.csv  401025260.csv  401025261.csv  401025263.csv  401025264.csv  (+6 more)
src/fastfantasy/data/raw/tournaments/: espn_tournaments_2018.csv
tests/: test_fastfantasy.py  test_historical_data.py  test_tournaments.py
