[tool.poetry]
name = "fastfantasy"
version = "0.1.0"
description = "Collect daily fantasy sports data"
authors = ["Kevin Davis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
