[tool.poetry]
name = "fastfantasy"
version = "0.1.0"
description = "Collect daily fantasy sports data"
authors = ["Kevin Davis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
